--- a/sunny-day-index.ipynb
+++ b/sunny-day-index.ipynb
@@ -3,16 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "1bbc223e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set_style('darkgrid')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "e7f5b4d0",
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "5ac69d61",
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "714f7a23",
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +130,27 @@
     }
    ],
    "source": [
-    "df.rename(columns={'weathercode (wmo code)': 'weathercode', 'temperature_2m_max (°F)':'max_temperature', 'temperature_2m_min (°F)':'min_temperature', 'temperature_2m_mean (°F)':'mean_temperature', 'apparent_temperature_max (°F)':'max_feels_like', 'apparent_temperature_min (°F)':'min_feels_like', 'apparent_temperature_mean (°F)':'mean_feels_like', 'sunrise (iso8601)':'sunrise_time', 'sunset (iso8601)':'sunset_time', 'shortwave_radiation_sum (MJ/m²)':'solar_radiation_sum', 'rain_sum (inch)':'total_rainfall', 'snowfall_sum (inch)':'total_snowfall', 'windspeed_10m_max (mp/h)':'max_windspeed', 'windgusts_10m_max (mp/h)':'max_windgusts'}, inplace=True)\n",
+    "df.rename(columns={'weathercode (wmo code)': 'weathercode', \n",
+    "                   'temperature_2m_max (°F)':'max_temperature', \n",
+    "                   'temperature_2m_min (°F)':'min_temperature',\n",
+    "                   'temperature_2m_mean (°F)':'mean_temperature', \n",
+    "                   'apparent_temperature_max (°F)':'max_feels_like', \n",
+    "                   'apparent_temperature_min (°F)':'min_feels_like', \n",
+    "                   'apparent_temperature_mean (°F)':'mean_feels_like', \n",
+    "                   'sunrise (iso8601)':'sunrise_time', \n",
+    "                   'sunset (iso8601)':'sunset_time', \n",
+    "                   'shortwave_radiation_sum (MJ/m²)':'solar_radiation_sum', \n",
+    "                   'rain_sum (inch)':'total_rainfall', \n",
+    "                   'snowfall_sum (inch)':'total_snowfall', \n",
+    "                   'windspeed_10m_max (mp/h)':'max_windspeed', \n",
+    "                   'windgusts_10m_max (mp/h)':'max_windgusts'}, inplace=True)\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "e862550d",
    "metadata": {},
    "outputs": [
     {
@@ -169,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "5a1e729f",
    "metadata": {},
    "outputs": [
     {
@@ -340,13 +365,226 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "#TODO EXTEND THE EDA WITH MORE DATA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "04babfc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X   = df[['weathercode', \n",
+    "           'max_temperature', \n",
+    "           'min_temperature',\n",
+    "           'mean_temperature', \n",
+    "           'max_feels_like', \n",
+    "           'min_feels_like', \n",
+    "           'mean_feels_like', \n",
+    "           'solar_radiation_sum', \n",
+    "           'total_snowfall', \n",
+    "           'max_windspeed', \n",
+    "           'max_windgusts']] #get the input features\n",
+    "y   = df['total_rainfall'] #get the target TODO MAKE IT PRECIPITATION WHICH IS EQUIVALENT TO THE SUM OF TOTAL_RAINFALL AND TOTAL_SNOWFALL\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,              #the input features\n",
+    "                                                    y,              #the label\n",
+    "                                                    test_size=0.3,  #set aside 30% of the data as the test set\n",
+    "                                                    random_state=7 #reproduce the results\n",
+    "                                                   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a1ab1dda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(random_state=7)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(random_state=7)\n",
+    "rf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9750da34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted precipitation is: [0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 4.91510e-01\n",
+      " 2.69600e-02 1.48250e-01 0.00000e+00 0.00000e+00 2.98800e-02 0.00000e+00\n",
+      " 7.94100e-02 1.64740e-01 1.63600e-02 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 1.81200e-02 4.32620e-01 5.15320e-01 0.00000e+00 1.31140e-01\n",
+      " 0.00000e+00 2.35830e-01 0.00000e+00 0.00000e+00 2.76400e-02 7.73300e-02\n",
+      " 1.99720e-01 2.16000e-02 1.08800e-02 2.71600e-02 0.00000e+00 0.00000e+00\n",
+      " 1.65870e-01 0.00000e+00 2.55420e-01 0.00000e+00 2.09490e-01 0.00000e+00\n",
+      " 1.81200e-02 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 2.62000e-02\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 1.86400e-02\n",
+      " 7.70530e-01 0.00000e+00 1.96000e-02 1.20870e-01 0.00000e+00 2.00000e-03\n",
+      " 0.00000e+00 0.00000e+00 8.84500e-02 4.97530e-01 3.72100e-02 7.64500e-02\n",
+      " 0.00000e+00 1.40830e-01 1.78400e-02 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 1.02100e-02 1.22800e-02 1.25540e-01 0.00000e+00 1.13200e-02 1.50400e-02\n",
+      " 0.00000e+00 9.60000e-04 4.47950e-01 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 4.63200e-01 1.07070e-01 0.00000e+00 0.00000e+00 1.19630e-01 8.42500e-02\n",
+      " 0.00000e+00 1.24400e-02 8.64200e-02 9.60300e-02 0.00000e+00 2.07420e-01\n",
+      " 0.00000e+00 0.00000e+00 2.04480e-01 0.00000e+00 0.00000e+00 2.96170e-01\n",
+      " 6.33350e-01 0.00000e+00 2.18680e-01 0.00000e+00 0.00000e+00 7.75400e-02\n",
+      " 0.00000e+00 2.07120e-01 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 1.79200e-02 0.00000e+00 0.00000e+00 1.12540e-01 1.15903e+00 4.46160e-01\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 9.19600e-02 0.00000e+00 4.97580e-01\n",
+      " 0.00000e+00 3.81600e-02 0.00000e+00 3.14500e-02 1.48910e+00 1.75200e-02\n",
+      " 2.35200e-02 0.00000e+00 1.44800e-02 0.00000e+00 0.00000e+00 4.66290e-01\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 2.11200e-02 1.12000e-03\n",
+      " 6.53700e-02 0.00000e+00 0.00000e+00 1.36800e-02 1.15600e-02 2.56400e-02\n",
+      " 0.00000e+00 0.00000e+00 1.37000e-02 1.21200e-02 3.26110e-01 0.00000e+00\n",
+      " 0.00000e+00 3.78350e-01 0.00000e+00 0.00000e+00 1.74000e-02 3.86870e-01\n",
+      " 6.13690e-01 0.00000e+00 2.59730e-01 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 5.28100e-01 2.33000e-02 0.00000e+00 6.93530e-01 1.02000e-02 1.28470e-01\n",
+      " 0.00000e+00 5.16140e-01 0.00000e+00 1.04800e-02 0.00000e+00 8.58800e-02\n",
+      " 0.00000e+00 6.59360e-01 0.00000e+00 2.35140e-01 7.76800e-01 2.26400e-02\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 1.48890e-01\n",
+      " 5.70640e-01 3.56730e-01 0.00000e+00 0.00000e+00 7.20750e-01 0.00000e+00\n",
+      " 0.00000e+00 7.10830e-01 0.00000e+00 0.00000e+00 0.00000e+00 1.02044e+00\n",
+      " 0.00000e+00 0.00000e+00 2.14800e-02 1.33800e-01 3.59000e-03 0.00000e+00\n",
+      " 0.00000e+00 1.85200e-01 2.30250e-01 5.01680e-01 1.38107e+00 1.38000e-02\n",
+      " 0.00000e+00 4.12370e-01 2.07690e-01 2.38400e-02 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 1.37600e-02 3.89720e-01 0.00000e+00 0.00000e+00 3.84010e-01\n",
+      " 1.26450e-01 0.00000e+00 0.00000e+00 1.20550e-01 0.00000e+00 5.13340e-01\n",
+      " 2.05790e-01 2.09890e-01 2.10400e-02 0.00000e+00 2.24000e-02 5.40760e-01\n",
+      " 4.77550e-01 0.00000e+00 0.00000e+00 0.00000e+00 2.24800e-02 6.81080e-01\n",
+      " 0.00000e+00 0.00000e+00 7.96000e-03 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 7.44000e-02 1.89920e-01\n",
+      " 5.51960e-01 5.40360e-01 2.50010e-01 1.50620e-01 0.00000e+00 1.57140e-01\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 1.74400e-02 4.52060e-01 1.25600e-02\n",
+      " 5.58690e-01 7.88830e-01 0.00000e+00 0.00000e+00 1.02720e-01 0.00000e+00\n",
+      " 0.00000e+00 1.32440e-01 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 3.01200e-02 1.56220e-01 0.00000e+00 1.19600e-02 1.49600e-02 1.77600e-02\n",
+      " 1.88800e-02 1.73380e-01 2.98400e-02 0.00000e+00 0.00000e+00 6.21370e-01\n",
+      " 0.00000e+00 3.06000e-02 2.98400e-02 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 8.71670e-01 0.00000e+00 0.00000e+00 2.12440e-01 0.00000e+00 0.00000e+00\n",
+      " 6.30800e-02 0.00000e+00 0.00000e+00 3.13400e-02 0.00000e+00 3.83540e-01\n",
+      " 1.49710e-01 1.98400e-02 5.06450e-01 0.00000e+00 9.11000e-02 0.00000e+00\n",
+      " 1.72000e-02 1.34000e-02 1.30000e-02 0.00000e+00 0.00000e+00 8.29000e-01\n",
+      " 1.13010e-01 7.67900e-02 0.00000e+00 0.00000e+00 5.58720e-01 2.90660e-01\n",
+      " 0.00000e+00 0.00000e+00 2.30410e-01 4.46050e-01 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 1.46500e-02 0.00000e+00 1.64800e-02 0.00000e+00 5.49260e-01\n",
+      " 8.76100e-01 0.00000e+00 7.06700e-02 6.78890e-01 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 1.70400e-02 0.00000e+00 3.17200e-02 0.00000e+00 0.00000e+00\n",
+      " 1.25200e-02 0.00000e+00 2.53040e-01 1.92800e-02 9.14190e-01 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 5.08230e-01 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 7.16100e-01 0.00000e+00 1.04400e-02 6.74230e-01\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 4.01080e-01 2.58400e-02 0.00000e+00\n",
+      " 1.72580e-01 6.89490e-01 6.00360e-01 2.72750e-01 0.00000e+00 3.13120e-01\n",
+      " 5.14490e-01 5.05570e-01 7.96800e-02 0.00000e+00 1.14400e-02 0.00000e+00\n",
+      " 3.40720e-01 1.04250e-01 0.00000e+00 0.00000e+00 0.00000e+00 5.28700e-02\n",
+      " 1.48800e-02 0.00000e+00 0.00000e+00 5.57180e-01 0.00000e+00 0.00000e+00\n",
+      " 1.77110e-01 1.32000e-03 2.12780e-01 0.00000e+00 9.12600e-02 0.00000e+00\n",
+      " 1.48400e-02 0.00000e+00 0.00000e+00 4.31000e-01 0.00000e+00 1.12490e-01\n",
+      " 2.26280e-01 1.36250e-01 0.00000e+00 2.58780e-01 1.74271e+00 9.80000e-03\n",
+      " 0.00000e+00 1.48800e-02 0.00000e+00 8.47800e-02 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 4.63110e-01 1.54650e-01 1.66910e-01\n",
+      " 4.01310e-01 0.00000e+00 7.86360e-01 0.00000e+00 1.39200e-02 4.99470e-01\n",
+      " 1.16880e-01 0.00000e+00 6.84200e-01 5.66110e-01 1.79200e-02 0.00000e+00\n",
+      " 2.05940e-01 0.00000e+00 8.04000e-03 0.00000e+00 7.85500e-02 1.76800e-02\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 2.02900e-02 0.00000e+00\n",
+      " 1.30400e-02 0.00000e+00 0.00000e+00 1.34000e-02 0.00000e+00 0.00000e+00\n",
+      " 4.15860e-01 1.54000e-02 0.00000e+00 0.00000e+00 0.00000e+00 2.26400e-02\n",
+      " 1.71090e-01 3.95680e-01 1.25350e-01 1.48880e-01 0.00000e+00 2.08500e-02\n",
+      " 0.00000e+00 2.29260e-01 1.86630e-01 0.00000e+00 0.00000e+00 9.73800e-02\n",
+      " 0.00000e+00 5.21530e-01 0.00000e+00 1.04400e-02 2.31510e-01 0.00000e+00\n",
+      " 0.00000e+00 1.15070e-01 1.00773e+00 0.00000e+00 2.44620e-01 1.69600e-02\n",
+      " 0.00000e+00 1.08960e-01 0.00000e+00 0.00000e+00 0.00000e+00 9.37900e-02\n",
+      " 6.53000e-02 0.00000e+00 0.00000e+00 1.45200e-02 0.00000e+00 2.60800e-02\n",
+      " 1.76400e-02 0.00000e+00 0.00000e+00 0.00000e+00 8.46900e-02 0.00000e+00\n",
+      " 5.27210e-01 6.45350e-01 0.00000e+00 4.08000e-03 4.03010e-01 0.00000e+00\n",
+      " 0.00000e+00 3.62760e-01 0.00000e+00 0.00000e+00 0.00000e+00 1.68000e-03\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 1.58800e-02 7.40000e-03 8.97300e-02\n",
+      " 1.36400e-02 4.63180e-01 2.55020e-01 5.24270e-01 0.00000e+00 0.00000e+00\n",
+      " 4.20480e-01 2.28400e-02 1.78800e-02 0.00000e+00 2.21200e-02 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 8.87100e-02\n",
+      " 0.00000e+00 8.58500e-02 1.15470e-01 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 1.48270e-01 4.23860e-01 0.00000e+00 1.82270e-01 0.00000e+00 4.04100e-02\n",
+      " 0.00000e+00 8.07620e-01 1.82480e-01 0.00000e+00 1.43920e-01 0.00000e+00\n",
+      " 0.00000e+00 7.88600e-02 7.03300e-02 2.18570e-01 0.00000e+00 0.00000e+00\n",
+      " 1.73600e-02 0.00000e+00 0.00000e+00 0.00000e+00 2.36260e-01 0.00000e+00\n",
+      " 8.75200e-01 6.16000e-03 8.70400e-02 0.00000e+00 1.92800e-02 1.08807e+00\n",
+      " 1.96410e-01 0.00000e+00 1.08270e-01 1.69585e+00 0.00000e+00 7.01300e-02\n",
+      " 7.17600e-01 0.00000e+00 0.00000e+00 1.28600e-01 2.26110e-01 1.51200e-02\n",
+      " 0.00000e+00 9.47000e-02 0.00000e+00 0.00000e+00 2.11800e-01 0.00000e+00\n",
+      " 0.00000e+00 1.60000e-02 2.22370e-01 0.00000e+00 2.60670e-01 0.00000e+00\n",
+      " 2.57580e-01 2.27990e-01 0.00000e+00 0.00000e+00 5.32070e-01 7.62130e-01\n",
+      " 5.34550e-01 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 2.25650e-01 5.11300e-02 0.00000e+00\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 1.16880e-01 1.81200e-02 9.34600e-02\n",
+      " 0.00000e+00 1.34870e-01 0.00000e+00 0.00000e+00 1.77200e-02 0.00000e+00\n",
+      " 0.00000e+00 2.05200e-02 6.56800e-01 5.01060e-01 0.00000e+00 1.97290e-01\n",
+      " 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00 0.00000e+00\n",
+      " 2.59200e-02 0.00000e+00 4.92000e-03 0.00000e+00 3.42760e-01 1.31600e-02\n",
+      " 1.14630e-01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#predict the labels for the test set\n",
+    "y_pred   = rf.predict(X_test)\n",
+    "\n",
+    "print('The predicted precipitation is: {}'.format(y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28d3b870",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mse of the model is: 0.016936813582020795\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# Evaluate the Predictions\n",
+    "print('The mse of the model is: {}'.format(mse))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80894bb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -360,15 +598,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
-  },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "a448012e187023f257952e296b597efd69b222d50cb6c81ed25e736180ead91b"
-   }
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
