--- a/sunny-day-index.ipynb
+++ b/sunny-day-index.ipynb
@@ -19,41 +19,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e7f5b4d0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2243 entries, 0 to 2242\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                           Non-Null Count  Dtype  \n",
-      "---  ------                           --------------  -----  \n",
-      " 0   time                             2243 non-null   object \n",
-      " 1   weathercode (wmo code)           2243 non-null   int64  \n",
-      " 2   temperature_2m_max (°F)          2243 non-null   float64\n",
-      " 3   temperature_2m_min (°F)          2243 non-null   float64\n",
-      " 4   temperature_2m_mean (°F)         2243 non-null   float64\n",
-      " 5   apparent_temperature_max (°F)    2243 non-null   float64\n",
-      " 6   apparent_temperature_min (°F)    2243 non-null   float64\n",
-      " 7   apparent_temperature_mean (°F)   2243 non-null   float64\n",
-      " 8   sunrise (iso8601)                2243 non-null   object \n",
-      " 9   sunset (iso8601)                 2243 non-null   object \n",
-      " 10  shortwave_radiation_sum (MJ/m²)  2243 non-null   float64\n",
-      " 11  rain_sum (inch)                  2243 non-null   float64\n",
-      " 12  snowfall_sum (inch)              2243 non-null   float64\n",
-      " 13  windspeed_10m_max (mp/h)         2243 non-null   float64\n",
-      " 14  windgusts_10m_max (mp/h)         2243 non-null   float64\n",
-      "dtypes: float64(11), int64(1), object(3)\n",
-      "memory usage: 263.0+ KB\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mData/Jan2017_to_Feb2023_data.csv\u001b[39m\u001b[39m'\u001b[39m, skiprows\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[1;32m      2\u001b[0m df\u001b[39m.\u001b[39minfo()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('Jan2017_to_Feb2023_data.csv', skiprows=3)\n",
+    "df = pd.read_csv('Data/Jan2017_to_Feb2023_data.csv', skiprows=3)\n",
     "df.info()"
    ]
   },
@@ -598,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
