--- a/sunny-day-index.ipynb
+++ b/sunny-day-index.ipynb
@@ -14,6 +14,8 @@
     "from sklearn.metrics import mean_squared_error\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "%pip install plotly\n",
+    "import plotly.express as px\n",
     "sns.set_style('darkgrid')"
    ]
   },
