corrected errors in chart titles

--- a/precip-predict.ipynb
+++ b/precip-predict.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "37343415",
    "metadata": {},
    "source": [
-    "## Sunny Day Index Project\n",
+    "## Predicting Precipitation in the New York City Area\n",
     "### DS 3000 - Spring 2023 \n",
     "### Northeastern University - Khoury College of Computer Sciences\n",
     "### Authors: Brian Hayward, Jason Martinez, Noah Weinstein, Issac Schweiger\n",
@@ -48091,7 +48092,7 @@
     "sns.scatterplot(x=y_test, y=y_pred, alpha=0.8)\n",
     "plt.xlabel('Actual rainfall')\n",
     "plt.ylabel('Predicted rainfall')\n",
-    "plt.title('Actual vs Predicted rainfall - KNN Regressor')\n",
+    "plt.title('Actual vs Predicted rainfall - SVM Regressor')\n",
     "plt.show()\n",
     "\n",
     "# Plotting the distribution of prediction errors using seaborn\n",
@@ -48100,7 +48101,7 @@
     "sns.histplot(error, kde=True, bins=30)\n",
     "plt.xlabel('Prediction Error')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of Prediction Errors - KNN Regressor')\n",
+    "plt.title('Distribution of Prediction Errors - SVM Regressor')\n",
     "plt.show()"
    ]
   },
@@ -48147,7 +48148,7 @@
     "sns.lineplot(x=weekly_avg_precip.index, y=weekly_avg_precip.values)\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Weekly Average Predicted rainfall')\n",
-    "plt.title('Weekly Average Predicted rainfall Over Time - Support Vector Machine Regressor')\n",
+    "plt.title('Weekly Average Predicted rainfall Over Time - SVM Regressor')\n",
     "plt.show()\n",
     "\n",
     "# Calculate yearly average predicted rainfall\n",
@@ -48157,7 +48158,7 @@
     "plt.figure(figsize=(12, 6))\n",
     "sns.barplot(x=yearly_avg_pred_precip.index.year, y=yearly_avg_pred_precip.values)\n",
     "plt.xlabel('Year')\n",
-    "plt.ylabel('Yearly Average Predicted rainfall - Support Vector Machine Regressor')\n",
+    "plt.ylabel('Yearly Average Predicted rainfall - SVM Regressor')\n",
     "plt.title('Yearly Average Predicted rainfall (2023-2028)')\n",
     "plt.show()"
    ]
